<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_manigation"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.storyapp.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboardFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_dashboardFragment_to_insertFragment"
            app:destination="@id/insertFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
        <action
            android:id="@+id/action_dashboardFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.storyapp.ui.settings.SettingsFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_authActivity"
            app:destination="@id/authActivity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/insertFragment"
        android:name="com.example.storyapp.ui.insert.InsertFragment"
        android:label="@string/add_story"
        tools:layout="@layout/fragment_insert" />
    <activity
        android:id="@+id/authActivity"
        android:name="com.example.storyapp.ui.auth.AuthActivity"
        android:label="@string/login"
        tools:layout="@layout/activity_auth" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.storyapp.ui.detail.DetailFragment"
        android:label="@string/story_detail"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="story_item"
            app:argType="com.example.storyapp.data.local.entity.StoryEntity" />
    </fragment>
    <activity
        android:id="@+id/mapsNavigation"
        android:name="com.example.storyapp.ui.maps.MapsActivity"
        android:label="@string/menu_maps"
        tools:layout="@layout/activity_maps" />
</navigation>