<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_story_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/space_16dp"
    android:layout_marginTop="@dimen/space_12dp"
    android:layout_marginBottom="@dimen/space_4dp"
    app:cardCornerRadius="@dimen/space_12dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_story_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/image_story" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_12dp">

            <TextView
                android:id="@+id/tv_username"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/username_dummy" />

            <TextView
                android:id="@+id/tv_caption"
                style="@style/TextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:textSize="@dimen/text_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username"
                tools:text="@string/caption_dummy" />

            <TextView
                android:id="@+id/tv_show_more"
                android:layout_width="@dimen/space_0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/show_more"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_caption" />

            <TextView
                android:id="@+id/tv_country"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/gray"
                app:layout_constraintBottom_toBottomOf="@+id/tv_username"
                app:layout_constraintStart_toEndOf="@+id/tv_username"
                app:layout_constraintTop_toTopOf="@+id/tv_username"
                tools:text="@string/country_dummy" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/TextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4dp"
                android:textSize="@dimen/text_12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_caption"
                tools:text="@string/date_dummy" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="@dimen/space_4dp"
                android:layout_height="@dimen/space_4dp"
                android:foreground="@color/light_gray"
                app:cardCornerRadius="@dimen/space_100dp"
                app:cardElevation="@dimen/space_0dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_username"
                app:layout_constraintEnd_toStartOf="@+id/tv_country"
                app:layout_constraintStart_toEndOf="@+id/tv_username"
                app:layout_constraintTop_toTopOf="@+id/tv_username" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>

