<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_username_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/username_dummy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/text_16sp"
            android:layout_margin="@dimen/space_8dp"/>

        <ImageView
            android:id="@+id/iv_story_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_400dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            app:layout_constraintTop_toBottomOf="@+id/tv_username_top" />

        <TextView
            android:id="@+id/tv_username"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/username_dummy"
            android:textSize="@dimen/text_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_story_image"
            android:layout_marginStart="12dp"
            android:layout_marginTop="@dimen/space_12dp"/>

        <TextView
            android:id="@+id/tv_caption"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_12dp"
            android:ellipsize="end"
            android:textSize="@dimen/text_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username"
            tools:text="@string/caption_dummy" />

        <TextView
            android:id="@+id/country"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/tv_username"
            app:layout_constraintStart_toEndOf="@+id/tv_username"
            app:layout_constraintTop_toTopOf="@+id/tv_username"
            tools:text="@string/country_dummy"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/tv_date"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4dp"
            android:textSize="@dimen/text_12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_caption"
            app:layout_constraintTop_toBottomOf="@+id/tv_caption"
            tools:text="@string/date_dummy" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="@dimen/space_4dp"
            android:layout_height="@dimen/space_4dp"
            android:foreground="@color/light_gray"
            app:cardCornerRadius="@dimen/space_100dp"
            app:cardElevation="@dimen/space_0dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_username"
            app:layout_constraintEnd_toStartOf="@+id/country"
            app:layout_constraintStart_toEndOf="@+id/tv_username"
            app:layout_constraintTop_toTopOf="@+id/tv_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>