<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.insert.InsertFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/space_28dp"
            app:cardCornerRadius="@dimen/space_12dp">

            <ImageView
                android:id="@+id/iv_preview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_300dp"
                app:srcCompat="@drawable/ic_place_holder"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_28dp"
            android:layout_marginStart="@dimen/space_40dp"
            android:layout_marginEnd="@dimen/space_8dp"
            android:text="@string/camera"
            app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_preview" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8dp"
            android:layout_marginEnd="@dimen/space_40dp"
            android:text="@string/gallery"
            app:layout_constraintBottom_toBottomOf="@+id/btn_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_camera"
            app:layout_constraintTop_toTopOf="@+id/btn_camera" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/CustomTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_28dp"
            android:layout_marginTop="@dimen/space_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_gallery">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_caption"
                style="@style/CustomTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/caption"
                android:inputType="textMultiLine"
                android:lines="6"
                android:gravity="top|start"
                android:maxLines="8"
                android:scrollbars="vertical"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="@dimen/space_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_28dp"
            android:layout_marginVertical="@dimen/space_16dp"
            android:text="@string/upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/iv_loading"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_100dp"
            android:scaleX="3"
            android:scaleY="3"
            android:layout_marginVertical="@dimen/space_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_upload"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading_animation"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>